[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/DialogScenes/Dialog/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/DialogScenes/DialogItem/DialogItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/DialogScenes/DialogGroups/DialogGroups.gd" type="Script" id=3]
[ext_resource path="res://fonts/retro_gaming/Retro Gaming.tres" type="DynamicFont" id=4]
[ext_resource path="res://Main/DialogScenes/DialogBox/Characters/Characters.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/DialogScenes/DialogGroups/TextTester.gd" type="Script" id=6]
[ext_resource path="res://Main/DialogScenes/DialogGroups/Dialogs.gd" type="Script" id=8]

[node name="DialogGroups" type="Node"]
script = ExtResource( 3 )

[node name="Dialogs" type="Node" parent="."]
script = ExtResource( 8 )
dialog_template = ExtResource( 1 )

[node name="Intro" parent="Dialogs" instance=ExtResource( 1 )]
id = 0

[node name="DialogItem40" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Hit [right-click] or [period] to progress dialogue"

[node name="DialogItem41" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Hit [backspace] to skip a section of dialogue"

[node name="DialogItem" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "SOMEWHERE IN DEEP SPACE"

[node name="DialogItem2" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "...we’re only a few days from the next trading post."
speaking = 0
left_id = 0

[node name="DialogItem3" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "I’m not sure we’ll be able to afford boarding."
speaking = 0
left_id = 0
left_frame = 3

[node name="DialogItem4" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Sleeping in the ship is sufficient."
speaking = 1
left_id = 0
left_frame = 3
right_id = 2

[node name="DialogItem5" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Maybe for you… you’re a robot!"
speaking = 0
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem6" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "And there’s nothing left to eat but these expired "
speaking = 0
left_id = 0
left_frame = 3
right_id = 2

[node name="DialogItem7" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "space rations we picked up a couple planets ago."
speaking = 0
left_id = 0
left_frame = 3
right_id = 2

[node name="DialogItem8" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "I see, our predicament is rather dire..."
speaking = 1
left_id = 0
left_frame = 3
right_id = 2
right_frame = 3

[node name="DialogItem9" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Perhaps we will be able to find something to sell…"
speaking = 1
left_id = 0
left_frame = 3
right_id = 2

[node name="DialogItem10" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "HEAT SIGNATURE DETECTED - HEAT SIGNATURE DETECTED"
left_id = 0
left_frame = 3
right_id = 2

[node name="DialogItem11" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "..!"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2
text_speed = 0.5

[node name="DialogItem12" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "What’s going on?"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem13" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "It seems that a powerful heat signature has been "
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem14" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "detected in a nearby galaxy."
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem15" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "That’s strange… it’s emitting energy!"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2
right_frame = 2

[node name="DialogItem16" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "It’s a black hole!"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2
right_frame = 1

[node name="DialogItem17" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "*gasps*"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2
right_frame = 1

[node name="DialogItem18" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "It is radiating a vast amount of energy.  "
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem19" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "The Confederation Of Galaxies"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem20" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "have already sent a fleet."
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem21" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "During my time working for the Confederation,"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem22" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "they often sent fleets to harvest the raw energy"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem23" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "emitted from black holes like this one."
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem24" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Why don’t we harvest the energy?"
speaking = 0
left_id = 0
right_id = 2

[node name="DialogItem25" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "The Confederation has already claimed"
speaking = 1
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem26" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "it as government resources."
speaking = 1
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem27" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "They would destroy our ship."
speaking = 1
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem28" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "This could be our big break!  We have to try!"
speaking = 0
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem29" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Even if we were to try, the black hole is over"
speaking = 1
left_id = 0
right_id = 2
right_frame = 1

[node name="DialogItem30" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "six lightyears away!"
speaking = 1
left_id = 0
right_id = 2
right_frame = 1

[node name="DialogItem31" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Our hyperdrive wouldn’t last that many jumps."
speaking = 1
left_id = 0
right_id = 2
right_frame = 1

[node name="DialogItem32" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "I built this ship myself - I know it’ll hold."
speaking = 0
left_id = 0
left_frame = 2
right_id = 2
right_frame = 1

[node name="DialogItem33" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "I hope you’re right…"
speaking = 1
left_id = 0
left_frame = 2
right_id = 2
right_frame = 3

[node name="DialogItem34" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "Hyperdrive…"
speaking = 1
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem35" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "...ACTIVATE!"
speaking = 1
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="DialogItem36" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "*WHIRRING*"
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="DialogItem37" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "*CLANG*"
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="DialogItem38" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "The hyperdrive won’t get us deep enough into the galaxy!"
speaking = 1
left_id = 0
left_frame = 2
right_id = 2
right_frame = 1

[node name="DialogItem39" parent="Dialogs/Intro" instance=ExtResource( 2 )]
dialog = "We need to go... DEEPER!"
speaking = 0
left_id = 0
left_frame = 2
right_id = 2
right_frame = 1

[node name="PreLevel1" parent="Dialogs" instance=ExtResource( 1 )]
id = 1

[node name="DialogItem" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "AAAH!  Where are we?!"
speaking = 0
left_id = 0
left_frame = 1

[node name="DialogItem2" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "We appear to be in the Xephos Quadrant."
speaking = 1
left_id = 0
left_frame = 1
right_id = 2
right_frame = 1

[node name="DialogItem3" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "Where in the galaxy is THAT?"
speaking = 0
left_id = 0
left_frame = 2
right_id = 2
right_frame = 1

[node name="DialogItem4" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "We are in unexplored space."
speaking = 1
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem5" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "Our hyperdrive got us 2 lightyears closer,"
speaking = 1
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem6" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "but it will take a while to recharge."
speaking = 1
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem7" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "WARNING - ATTACK IMMINENT.  SHIELDS ACTIVATED"
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem8" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "The Confederation is attacking ALREADY?"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem9" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "It’s not the Confederation - "
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem10" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "it’s a hostile species native to a nearby planet."
speaking = 1
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem11" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "ALERT, SHIELDS DAMAGED"
left_id = 0
left_frame = 1
right_id = 2

[node name="DialogItem12" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "If they want a fight, then they’ll get a fight!"
speaking = 0
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem13" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "WEAPONS ENGAGED"
left_id = 0
left_frame = 2
right_id = 2

[node name="DialogItem14" parent="Dialogs/PreLevel1" instance=ExtResource( 2 )]
dialog = "FLY WITH WASD AND SHOOT WITH THE SPACE BAR"
left_id = 0
left_frame = 2
right_id = 2

[node name="PreBoss1" parent="Dialogs" instance=ExtResource( 1 )]
id = 2

[node name="DialogItem" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Whew, that was close!"
speaking = 0
left_id = 0

[node name="DialogItem2" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Keep the shields up -"
speaking = 1
left_id = 0
right_id = 2
right_frame = 1

[node name="DialogItem3" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "another ship just jumped to this galaxy."
speaking = 1
left_id = 0
right_id = 2
right_frame = 1

[node name="DialogItem4" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "How big of a ship are we talking about?"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2
right_frame = 1

[node name="DialogItem5" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "A Confederation battleship!"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2
right_frame = 2

[node name="DialogItem6" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Man, they’re quick!  Hopefully we can sneak by…"
speaking = 0
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="DialogItem7" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "INCOMING TRANSMISSION"
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="DialogItem8" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Attention Space Explorers,"
speaking = 1
right_id = 1

[node name="DialogItem9" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "the C.O.G. has declared this district"
speaking = 1
right_id = 1

[node name="DialogItem10" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "be cleared of ships."
speaking = 1
right_id = 1

[node name="DialogItem11" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Leave or prepare to be shot."
speaking = 1
right_id = 1

[node name="DialogItem12" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "..!"
speaking = 0
left_id = 0
left_frame = 1
right_id = 2
text_speed = 0.2

[node name="DialogItem13" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Let me handle this -"
speaking = 1
left_id = 0
left_frame = 1
right_id = 2
text_speed = 0.2

[node name="DialogItem14" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Greetings, Captain!"
speaking = 0
left_id = 2
left_frame = 1
right_id = 1

[node name="DialogItem15" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "I am on C.O.G. Business,"
speaking = 0
left_id = 2
left_frame = 1
right_id = 1

[node name="DialogItem16" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "I am researching the nearby species and planets."
speaking = 0
left_id = 2
left_frame = 1
right_id = 1

[node name="DialogItem17" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Scan your ID badge."
speaking = 1
left_id = 2
left_frame = 1
right_id = 1

[node name="DialogItem18" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "It says here you abandoned your fleet and"
speaking = 1
left_id = 2
left_frame = 1
right_id = 1
right_frame = 1

[node name="DialogItem19" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "there’s an order for your arrest!"
speaking = 1
left_id = 2
left_frame = 1
right_id = 1
right_frame = 1

[node name="DialogItem20" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "Prepare to be boarded!"
speaking = 1
left_id = 2
left_frame = 1
right_id = 1
right_frame = 2

[node name="DialogItem21" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "No way!  Just let us through!"
speaking = 0
left_id = 0
left_frame = 2
right_id = 1
right_frame = 2

[node name="DialogItem22" parent="Dialogs/PreBoss1" instance=ExtResource( 2 )]
dialog = "It’s no use, we’ll have to fight."
speaking = 1
left_id = 0
left_frame = 2
right_id = 2
right_frame = 2

[node name="PostBoss1" parent="Dialogs" instance=ExtResource( 1 )]
id = 3

[node name="DialogItem" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "I'LL GET YOU FOR THIS"
speaking = 1
right_id = 1
right_frame = 2

[node name="DialogItem2" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "Wow, we did it!"
speaking = 0
left_id = 0

[node name="DialogItem3" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "Yes, it's just too bad this is"
speaking = 1
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem4" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "the end of the jam version."
speaking = 1
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem5" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "Oh well, "
speaking = 0
left_id = 0
left_frame = 3
right_id = 2
right_frame = 3

[node name="DialogItem6" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "it's been a [rainbow]blast[/rainbow]."
speaking = 0
left_id = 0
right_id = 2
right_frame = 3

[node name="DialogItem7" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]

[node name="DialogItem8" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]

[node name="DialogItem9" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "Thanks for playing our game!"
speaking = 2
left_id = 0
right_id = 2

[node name="DialogItem10" parent="Dialogs/PostBoss1" instance=ExtResource( 2 )]
dialog = "-MrPiedPiper
-StinkyKitty"
speaking = 2
left_id = 0
right_id = 2

[node name="Tools" type="Node" parent="."]

[node name="TextTester" type="Node" parent="Tools"]
script = ExtResource( 6 )
chars = ExtResource( 5 )
dialog_item_template = ExtResource( 2 )
add_to_id = 0

[node name="DialogBox" type="Control" parent="Tools/TextTester"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectBackground" type="ColorRect" parent="Tools/TextTester/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.12549, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portraits" type="MarginContainer" parent="Tools/TextTester/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_left = 4
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PortraitLeft" type="TextureRect" parent="Tools/TextTester/DialogBox/Portraits"]
margin_left = 4.0
margin_right = 316.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitRight" type="TextureRect" parent="Tools/TextTester/DialogBox/Portraits"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="DialogContainer" type="MarginContainer" parent="Tools/TextTester/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 80
custom_constants/margin_top = 4
custom_constants/margin_left = 80
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="Tools/TextTester/DialogBox/DialogContainer"]
margin_left = 80.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 39.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Hit [right-click] or [period] to progress dialogue"
text = "Hit [right-click] or [period] to progress dialogue"
fit_content_height = true
scroll_active = false

[node name="DialogTimer" type="Timer" parent="Tools/TextTester/DialogBox"]
wait_time = 0.2

[connection signal="timeout" from="Tools/TextTester/DialogBox/DialogTimer" to="Tools/TextTester" method="_on_DialogTimer_timeout"]
